charts/prometheus/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-server-ingress
  namespace: lens-metrics
  annotations:
    spec.ingressClassName: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
spec:
  ingressClassName: traefik
  rules:
  - host: alertmanager.devops.taipei
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager
            port:
              number: 9093
  tls:
  - hosts:
    - alertmanager.devops.taipei
    secretName: alertmanager-tls
